--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -83,6 +83,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <BufferSecurityCheck>true</BufferSecurityCheck>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -132,7 +135,6 @@
     <ClInclude Include="Var_for_threads.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Generate_key.h" />
-    <ClInclude Include="str_switch_case.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
