--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -84,11 +84,10 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ssleay32.lib;libeay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ssleay32.lib;libeay32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -118,7 +117,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ControlsDatabase.cpp" />
+    <ClCompile Include="LogFile.cpp" />
     <ClCompile Include="MyCover.cpp" />
     <ClCompile Include="Request.cpp" />
     <ClCompile Include="Interrupt.cpp" />
@@ -127,12 +126,11 @@
     <ClCompile Include="SendRecv.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Base64.cpp" />
-    <ClCompile Include="sqlite3.c" />
     <ClCompile Include="threads.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ControlsDatabase.h" />
     <ClInclude Include="Interrupt.h" />
+    <ClInclude Include="LogFile.h" />
     <ClInclude Include="MyCover.h" />
     <ClInclude Include="ResponseRequest.h" />
     <ClInclude Include="SendRecv.h" />
