--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Base64.cpp" />
     <ClCompile Include="threads.cpp" />
+    <ClCompile Include="WSLexer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ControlsDatabase.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Var_for_threads.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Generate_key.h" />
+    <ClInclude Include="WSLexer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
