--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -93,7 +93,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>vshared_release_x64.lib;vkernel_release_x64.lib;vclient_release_x64.lib;ssleay32.lib;libeay32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vshared_release_x64.lib;vkernel_release_x64.lib;vclient_release_x64.lib;libssl.lib;libcrypto.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>./openSSL/lib;./vdblib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -124,7 +124,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>vshared_release_x64.lib;vkernel_release_x64.lib;vclient_release_x64.lib;ssleay32.lib;libeay32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vshared_release_x64.lib;vkernel_release_x64.lib;vclient_release_x64.lib;libssl.lib;libcrypto.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>./openSSL/lib;./vdblib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
