--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Encryption.cpp" />
     <ClCompile Include="LogFile.cpp" />
     <ClCompile Include="MyCover.cpp" />
+    <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Request.cpp" />
     <ClCompile Include="Interrupt.cpp" />
     <ClCompile Include="Main.cpp" />
