--- a/http-server-ws.vcxproj.filters
+++ b/http-server-ws.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="WSLexer.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Parser.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Server.h">
