created new class Parser and some fix

--- a/http-server-ws.vcxproj.filters
+++ b/http-server-ws.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="WSLexer.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Parser.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
