--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="LogFile.h" />
     <ClInclude Include="MyCover.h" />
     <ClInclude Include="OtherExceptions.h" />
+    <ClInclude Include="Parser.h" />
     <ClInclude Include="ResponseRequest.h" />
     <ClInclude Include="SendRecv.h" />
     <ClInclude Include="Var_for_threads.h" />
