--- a/http-server-ws.vcxproj
+++ b/http-server-ws.vcxproj
@@ -134,11 +134,9 @@
     <ClCompile Include="LogFile.cpp" />
     <ClCompile Include="MyCover.cpp" />
     <ClCompile Include="OtherException.cpp" />
-    <ClCompile Include="Parser.cpp" />
-    <ClCompile Include="Request.cpp" />
+    <ClCompile Include="Response.cpp" />
     <ClCompile Include="Interrupt.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Response.cpp" />
     <ClCompile Include="SendRecv.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Base64.cpp" />
@@ -152,8 +150,7 @@
     <ClInclude Include="LogFile.h" />
     <ClInclude Include="MyCover.h" />
     <ClInclude Include="OtherExceptions.h" />
-    <ClInclude Include="Parser.h" />
-    <ClInclude Include="ResponseRequest.h" />
+    <ClInclude Include="Response.h" />
     <ClInclude Include="SendRecv.h" />
     <ClInclude Include="Var_for_threads.h" />
     <ClInclude Include="Server.h" />
