--- a/http-server-ws.vcxproj.filters
+++ b/http-server-ws.vcxproj.filters
@@ -27,13 +27,7 @@
     <ClCompile Include="Base64.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Response.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
     <ClCompile Include="Interrupt.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
-    <ClCompile Include="Request.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="SendRecv.cpp">
@@ -54,10 +48,10 @@
     <ClCompile Include="WSLexer.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Parser.cpp">
+    <ClCompile Include="OtherException.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="OtherException.cpp">
+    <ClCompile Include="Response.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
@@ -72,9 +66,6 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="Var_for_threads.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="ResponseRequest.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="SendRecv.h">
@@ -98,7 +89,7 @@
     <ClInclude Include="WSLexer.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="Parser.h">
+    <ClInclude Include="Response.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
