Implemented class SslServer

--- a/server/engine/core/CMakeLists.txt
+++ b/server/engine/core/CMakeLists.txt
@@ -1,2 +1,10 @@
-add_subdirectory(interfaces)
-add_subdirectory(private)
+set(CURTARGET "SSL_SERVER")
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+add_library(${CURTARGET}
+	SslServer.h
+	SslServer.cpp
+)
+
+target_link_libraries(${CURTARGET} Qt5::Network)
