Big update: 1) deleted old parser 2) added new parser 3) updated parser and lexer. Now they use Qt library 4) added asynchron communication
There are errors

--- a/server/engine/core/CMakeLists.txt
+++ b/server/engine/core/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_library(${CURTARGET}
 	SslServer.h
 	SslServer.cpp
+    Transport.h
+    Transport.cpp
 )
 
 target_link_libraries(${CURTARGET} Qt5::Network)
+target_link_libraries(${CURTARGET} HTTP)
