--- a/server/engine/http/CMakeLists.txt
+++ b/server/engine/http/CMakeLists.txt
@@ -1,12 +1,14 @@
-set(CURTARGET "SSL_SERVER")
+set(CURTARGET "HTTP")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_library(${CURTARGET}
-	Response.h
-	Response.cpp
+    GeneratorOfResponseHTTP.h
+    GeneratorOfResponseHTTP.cpp
 	WSLexer.h
 	WSLexer.cpp
 )
 
+target_link_libraries(${CURTARGET} Qt5::Core)
 target_link_libraries(${CURTARGET} Qt5::Network)
+
